--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,10 @@
 [target.x86_64-pc-windows-gnu]
 linker = "x86_64-w64-mingw32-gcc"
+[target.wasm32-unknown-emscripten]
+rustflags = [
+    "-C", "link-args=-pthread", # /!\ Read 'Thread support' below regarding this flag
+    "-C", "target-feature=+atomics", # /!\ Read 'Thread support' below regarding this flag
+    "-C", "link-args=-sSIDE_MODULE=2",
+    "-Zlink-native-libraries=no",
+    "-Cllvm-args=-enable-emscripten-cxx-exceptions=0",
+]
